# wadk

./: LICENSE  README.md
adk/cpp/weilsdk/: CMakeLists.txt  compile.sh
adk/cpp/weilsdk/include/weilsdk/: error.h  ledger.h  memory.h  utils.h
adk/cpp/weilsdk/src/: error.cpp  ledger.cpp  runtime.cpp
adk/cpp/weilsdk/src/weil_contracts/: fungible.cpp  nonFungible.cpp
adk/python/weil_ai/: __init__.py  auth.py  mcp.py  pyproject.toml
adk/python/weil_ai/agents/: __init__.py  weil.py
adk/python/weil_wallet/: __init__.py  client.py  constants.py  contract.py  derived_wallet.py  errors.py  py.typed  pyproject.toml  requirements.txt  streaming.py  transaction.py  utils.py  wallet.py
adk/python/weil_wallet/api/: __init__.py  platform_api.py  request.py
adk/rust/weil_rs/: Cargo.toml  errors
adk/rust/weil_rs/src/: config.rs  crm.rs  datadog.rs  db.rs  errors.rs  http.rs  ledger.rs  lib.rs  runtime.rs  s3.rs  sqs.rs  utils.rs  webserver.rs
adk/rust/weil_rs/src/collections/: map.rs  mod.rs  plottable.rs  set.rs  vec.rs
adk/rust/weil_rs/src/idempod/: request.rs  response.rs
adk/rust/weil_rs/src/mcp/: sqs.rs
adk/rust/weil_rs/weil_contracts/: Cargo.toml
adk/rust/weil_rs/weil_contracts/src/: claims_management.rs  fungible.rs  identity.rs  key_management.rs  lib.rs  non_fungible.rs
adk/rust/weil_rs/weil_macros/: Cargo.toml
adk/rust/weil_rs/weil_macros/src/: contract.rs  event.rs  lib.rs  weil_type.rs
adk/rust/weil_rs/weil_wallet/: Cargo.toml
adk/rust/weil_rs/weil_wallet/src/: constants.rs  contract.rs  lib.rs  streaming.rs  transaction.rs  wallet.rs
adk/rust/weil_wallet/: Cargo.toml
adk/rust/weil_wallet/src/: constants.rs  contract.rs  errors.rs  flow_registry.rs  lib.rs  streaming.rs  transaction.rs  utils.rs  wallet.rs
adk/rust/weil_wallet/src/api/: mod.rs  request.rs
applets/cpp/fungible_token/yutaka/: CMakeLists.txt  yutaka.widl
applets/cpp/fungible_token/yutaka/src/: main.cpp
applets/rust/: .gitignore  Cargo.toml  README.md  release.sh
applets/rust/.cargo/: config.toml
applets/rust/base_agent/: Cargo.toml  README.md  base_agent.widl  do_all.sh  manifest.json
applets/rust/base_agent/src/: helper.rs  lib.rs
applets/rust/base_client/: Cargo.toml
applets/rust/base_client/src/: main.rs
applets/rust/client/streaming/: Cargo.toml
applets/rust/client/streaming/src/: main.rs
applets/rust/client/yutaka/: Cargo.toml
applets/rust/client/yutaka/src/: main.rs
applets/rust/counter/counter/: Cargo.toml  do_all.sh
applets/rust/counter/counter/src/: lib.rs
applets/rust/counter/cross_counter/: Cargo.toml  do_all.sh
applets/rust/counter/cross_counter/src/: counter.rs  lib.rs
applets/rust/ft/yutaka/: Cargo.toml
applets/rust/fungible_token/yutaka/: Cargo.toml  do_all.sh  manifest.json
applets/rust/fungible_token/yutaka/src/: lib.rs
applets/rust/multi_agent/: Cargo.toml  README.md  do_all.sh  manifest.json  multi_agent.widl
applets/rust/multi_agent/src/: error.rs  helper.rs  lib.rs
applets/rust/multi_client/: Cargo.toml
applets/rust/multi_client/src/: main.rs
applets/rust/nft/asciiart/: Cargo.toml
applets/rust/non_fungible_token/asciiart/: Cargo.toml  do_all.sh  manifest.json
applets/rust/non_fungible_token/asciiart/src/: lib.rs
applets/rust/step_agent/: Cargo.toml  README.md  do_all.sh  step_agent.widl
applets/rust/step_agent/src/: helper.rs  lib.rs  registry.rs  utils.rs
applets/rust/step_client/: Cargo.toml
applets/rust/step_client/src/: client.rs  main.rs  registry.rs
applets/rust/xpod/A/: A.widl  Cargo.toml  do_all.sh
applets/rust/xpod/A/src/: lib.rs
applets/rust/xpod/B/: B.widl  Cargo.toml  do_all.sh
applets/rust/xpod/B/src/: lib.rs
applets/rust/xpod_2/first/: Cargo.toml
applets/rust/xpod_2/second/: Cargo.toml
mcps/rust/: Cargo.toml  release.sh
mcps/rust/arithmetic/: Cargo.toml  README.md  arithmetic.widl
mcps/rust/arithmetic/src/: lib.rs
mcps/rust/aurora/: Cargo.toml  README.md  aurora.widl  bindings.rs  config.yaml  context.txt  do_all.sh  manifest.json
mcps/rust/aurora/src/: lib.rs
mcps/rust/bigquery/: Cargo.toml  README.md  bigquery.widl  config.yaml  manifest.json
mcps/rust/bigquery/src/: lib.rs
mcps/rust/confluence/: Cargo.toml  README.md  confluence.widl  confluence.yaml  do_all.sh  manifest.json
mcps/rust/confluence/src/: lib.rs  page_body_types.rs  responses.rs  types.rs
mcps/rust/databricks/: Cargo.toml  README.md  config.yaml  context.txt  databricks.widl  manifest.json
mcps/rust/databricks/src/: auth.rs  catalog.rs  cluster.rs  dbfs.rs  functions.rs  job.rs  lib.rs  model_registry.rs  model_serving.rs  pipeline.rs  sql.rs
mcps/rust/datadog/: Cargo.toml  README.md  config.yaml  datadog.widl
mcps/rust/datadog/src/: lib.rs
mcps/rust/s3/: Cargo.toml  README.md  bindings.rs  config.yaml  do_all.sh  manifest.json  s3.widl
mcps/rust/s3/src/: lib.rs  url.rs
mcps/rust/salesforce/: Cargo.toml  README.md  config.yaml  context.txt  do_all.sh  manifest.json  salesforce.widl
mcps/rust/salesforce/src/: lib.rs
mcps/rust/sap_hana/: Cargo.toml  README.md  config.yaml  do_all.sh  manifest.json  sap_hana.widl
mcps/rust/sap_hana/src/: lib.rs
mcps/rust/secured_aurora/: Cargo.toml  README.md  config.yaml  manifest.json  secured_aurora.widl
mcps/rust/secured_aurora/src/: lib.rs
mcps/rust/servicenow/: Cargo.toml  README.md  config.yaml  do_all.sh  manifest.json  servicenow.widl
mcps/rust/servicenow/src/: lib.rs  structs.rs
mcps/rust/snowflake/: Cargo.toml  README.md  config.yaml  context.txt  do_all.sh  kemper.txt  manifest.json  modelfile  snowflake.widl
mcps/rust/snowflake/src/: lib.rs  parser.rs
mcps/rust/sqs/: Cargo.toml  README.md  sqs.widl  sqs.yaml
mcps/rust/sqs/src/: lib.rs
mcps/rust/stocks/: Cargo.toml  config.yaml  manifest.json  stocks.widl
mcps/rust/stocks/src/: lib.rs
mcps/rust/twilio/: Cargo.toml  README.md  bindings.rs  config.yaml  do_all.sh  manifest.json  twilio.widl
mcps/rust/twilio/src/: lib.rs
rust/weil_rs/: .gitignore  Cargo.toml
rust/weil_rs/src/: context.rs  imfs.rs  runtime.rs  traits.rs
rust/weil_rs/src/mcp/: s3.rs
(+276 files in other folders)
