[package]
name = "weil_rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "weil_macros",
    "weil_contracts"
]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
thiserror = "2.0.12"
hex ="0.4.3"
bytesize = "2.0.1"
rustc-hash = "2.0.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
bytesize = { workspace = true }
async-executor = "1.13.1"
futures-lite = "2.6.0"
rustc-hash = { workspace = true }
mime_guess = "2.0.5"
base32 = "0.5.1"
