[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weil-ai"
version = "0.1.0"
description = "MCP and AI integrations for WeilChain"
requires-python = ">=3.9"
dependencies = [
    "weil-wallet>=0.1.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastmcp>=3.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.20.0",
    "eth-account>=0.8.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["weil_ai*"]

[tool.setuptools.package-data]
weil_ai = ["py.typed"]
