[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weil-wallet"
version = "0.1.0"
description = "Python SDK for building clients that interact with smart contracts on WeilChain"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "coincurve>=21.0.0",
    "bip_utils>=2.9.0",
    "eth-hash[pycryptodome]>=0.5.0",
]

[project.optional-dependencies]
agents = [
    "langchain>=0.1.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["weil_wallet*"]

[tool.setuptools.package-data]
weil_wallet = ["py.typed"]
