[package]
name = "weil_rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "weil_macros",
    "weil_contracts",
    "weil_wallet",
]

[workspace.dependencies]
anyhow = "1.0.97"
async-stream = "0.3.6"
async-executor = "1.13.1"
async-compat = "0.2.4"
base32 = "0.5.1"
bytes = "1.10.1"
bytesize = "2.0.1"
crossbeam-skiplist = "0.1.3"
flate2 = "1.0.34"
futures-lite = "2.6.0"
futures-util = "0.3"
hex ="0.4.3"
libsecp256k1 = "0.7.1"
mime_guess = "2.0.5"
openssl = "0.10.66"
reqwest = { version = "0.12.14", features = ["json", "multipart", "stream"] }
rustc-hash = "2.0.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tokio = "1.44.0"
thiserror = "2.0.12"
uuid = {version = "1.15.1", features = ["serde", "v4"]}
url = "2.5.4"

[dependencies]
anyhow.workspace = true
async-executor.workspace = true
base32.workspace = true
bytesize.workspace = true
futures-lite.workspace = true
mime_guess.workspace = true
rustc-hash.workspace = true
serde.workspace = true 
serde_json.workspace = true 
thiserror.workspace = true
