[package]
name = "weil_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-executor.workspace = true
base32.workspace = true
bytesize.workspace = true
futures-lite.workspace = true
mime_guess.workspace = true
rustc-hash.workspace = true
serde.workspace = true 
serde_json.workspace = true 
thiserror.workspace = true
