[package]
name = "weil_wallet"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]

[dependencies]
anyhow = "1.0.97"
libsecp256k1 = "0.7.1"
hex = "0.4.3"
wadk-utils = { path = "../../../wadk-utils" }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
crossbeam-skiplist = "0.1.3"
uuid = {version = "1.15.1", features = ["serde", "v4"]}
url = "2.5.4"
reqwest = { version = "0.12.14", features = ["json", "multipart", "stream"] }
async-compat = "0.2.4"
openssl = "0.10.66"
thiserror = "2.0.12"
tokio = "1.44.0"
bytes = "1.10.1"
futures-util = "0.3"
flate2 = "1.0.34"
async-stream = "0.3.6"
base32 = "0.5.1"
