[package]
name = "base_client"
version = "0.1.0"
edition = "2024"

[dependencies]
weil_rs        = { workspace = true }
weil_contracts = { workspace = true }
weil_wallet    = { workspace = true }

anyhow = "1.0.98"
getrandom = { version = "0.3", features = ["wasm_js"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
thiserror = "2.0.12"