[package]
name = "step_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
weil_rs = { path = "../../../contract-sdk/rust/weil_rs/" }
weil_macros = { path = "../../../contract-sdk/rust/weil_rs/weil_macros" }
weil_contracts = { path = "../../../contract-sdk/rust/weil_rs/weil_contracts" }
wadk-utils = { path = "../../../wadk-utils" }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
thiserror = "2.0.17"
typetag = "0.2"

[lib]
crate-type = ["cdylib"]