[package]
name = "step_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
weil_rs = { workspace = true }
weil_macros = {workspace = true}
weil_contracts = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
typetag = { workspace = true }

[lib]
crate-type = ["cdylib"]