[package]
name = "step_client"
version = "0.1.0"
edition = "2024"

[dependencies]
weil_wallet = { path = "../../../contract-sdk/rust/weil_wallet" }
weil_rs = { path = "../../../contract-sdk/rust/weil_rs" }
weil_macros = { path = "../../../contract-sdk/rust/weil_rs/weil_macros" }
wadk-utils = { path = "../../../wadk-utils" }
tokio = { version = "1.40.0", features = ["full"]}
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }