[package]
name = "datadog"
version = "0.1.0"
edition = "2024"

[dependencies]
weil_rs = { path = "../../../wadk/rust/weil_rs/" }
weil_macros = { path = "../../../wadk/rust/weil_rs/weil_macros" }
weil_contracts = { path = "../../../wadk/rust/weil_rs/weil_contracts" }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }

[lib]
crate-type = ["cdylib"]
