[package]
name = "snowflake"
version = "0.1.0"
edition = "2024"

[dependencies]
weil_rs = { path = "../../../wadk/rust/weil_rs/" }
weil_macros = { path = "../../../wadk/rust/weil_rs/weil_macros" }
weil_contracts = { path = "../../../wadk/rust/weil_rs/weil_contracts" }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "serde"]}


[lib]
crate-type = ["cdylib"]
