[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
weil_rs = { path = "../../../../adk/rust/weil_rs/" }
weil_wallet = { path = "../../../../contract-sdk/rust/weil_wallet" }
tokio = { version = "1.40.0", features = ["full"]}
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
futures-util = "0.3"
