[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
serde = "1.0.219"
serde_json = "1.0.140"

weil_macros = { path = "../../../../contract-sdk/rust/weil_rs/weil_macros" }
weil_rs = { path = "../../../../contract-sdk/rust/weil_rs" }
weil_contracts = { path = "../../../../contract-sdk/rust/weil_rs/weil_contracts" }
wadk-utils = { path = "../../../../wadk-utils"}

[lib]
crate-type = ["cdylib"]
