[package]
name = "second"
version = "0.1.0"
edition = "2021"

[dependencies]
weil_rs = { path = "../../../../adk/rust/weil_rs/" }
weil_macros = { path = "../../../../adk/rust/weil_rs/weil_macros" }
weil_contracts = { path = "../../../../adk/rust/weil_rs/weil_contracts" }

serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
anyhow = "1.0.97"

[lib]
crate-type = ["cdylib"]
